'Table' Component: fix table's content wrap

--- a/src/Components/Table/Table.css
+++ b/src/Components/Table/Table.css
@@ -19,6 +19,10 @@
     font-size: 2rem;
 }
 
+.Table tr td{
+    white-space: nowrap;
+}
+
 .Table tr:not(:first-child):not(:last-child) td:not(:first-child) {
     padding-bottom: 2.7rem;
 }
